maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: value >- is not a member of Int
					if (c<getMondeLargeur() && v-1<getMondeHauteur() && c>-1 && v+1>-1){
                                                                                             ^JediEscaper:28: error: value >- is not a member of Int
					if (c-1<getMondeLargeur() && v<getMondeHauteur() && c-1>-1 && v>-1){				
                                                                                               ^JediEscaper:34: error: value >- is not a member of Int
				if (c-1<getMondeLargeur() && v<getMondeHauteur() && c-1>-1 && v>-1){	
                                                                                       ^JediEscaper:41: error: value >- is not a member of Int
				if (c<getMondeLargeur() && v+1<getMondeHauteur() && c>-1 && v+1>-1){
                                                                                     ^